[tool.poetry]
name = "pinkbike"
version = "0.0.0"
description = "A web scraper for the pinkbike buy/sell page"
authors = []

[tool.poetry.dependencies]
python = "^3.7"
click = "*"
pymongo = {version = "*", extras = ["srv"]}
requests = "*"
beautifulsoup4 = "*"
pandas = "*"
tqdm = "*"

[tool.poetry.dev-dependencies]
pytest = "*"
pre_commit = "*"

[tool.poetry.scripts]
pinkbike = "pinkbike.cli:cli"

[tool.isort]
line_length = 88
multi_line_output = 3
include_trailing_comma = true
known_third_party = ["bs4", "click", "pandas", "pymongo", "requests", "tqdm"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
